--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-wf-page="5d3408d6166bd80733a996da" data-wf-site="5d3408d6166bd8807fa996d9">
 <head>
   <meta charset="utf-8">
-  <title>testembeding</title>
+  <title>myHQ</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -14,9 +14,10 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="html-embed w-embed w-iframe"><iframe style="border: none;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTUk4mvtldw4gWcrqgIJMsZ6C%2FmyHQ%3Fnode-id%3D43%253A0%26viewport%3D-521%252C291%252C0.5574457049369812%26scaling%3Dmin-zoom" allowfullscreen=""></iframe></div>
+  <div class="html-embed w-embed w-iframe"><iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTUk4mvtldw4gWcrqgIJMsZ6C%2FmyHQ%3Fnode-id%3D40%253A54%26viewport%3D-521%252C291%252C0.5574457049369812%26scaling%3Dmin-zoom" allowfullscreen></iframe></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/myhq.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
+
