--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="html-embed w-embed w-iframe"><iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTUk4mvtldw4gWcrqgIJMsZ6C%2FmyHQ%3Fnode-id%3D40%253A54%26viewport%3D-521%252C291%252C0.5574457049369812%26scaling%3Dmin-zoom" allowfullscreen></iframe></div>
+  <div class="html-embed w-embed w-iframe"><iframe style="border: none;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTUk4mvtldw4gWcrqgIJMsZ6C%2FmyHQ%3Fnode-id%3D40%253A54%26viewport%3D-521%252C291%252C0.5574457049369812%26scaling%3Dmin-zoom" allowfullscreen></iframe></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/myhq.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
